--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Is it friday?</title>
+  <title>Nu är det fredag</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
